# opentelemetry-c

./: CMakeLists.txt  README.md
include/opentelemetry-c/: common.h  exporter_jaeger_trace.h  exporter_otlp_grpc.h  exporter_otlp_http.h
src/: attributes_iterable.h  common.cpp  exporter_jaeger_trace.cpp  exporter_otlp_grpc.cpp  exporter_otlp_http.cpp  headers_carrier.h  otlp.h  sampler.h  sampler_parent_root.h  span.h  tracer.h
tests/: CMakeLists.txt  jaeger_exporter_only.c  jaeger_processor_multi.c  jaeger_processor_only.c  jaeger_provider_only.c  jaeger_span.c  jaeger_tracer_only.c  otlp_http_span.c  sampler_only.c  span_headers.c  span_size_limit.c  trace_state.c  utils.c  utils.h
